WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11957
REGRESSION: Unordered List Bullets too big and changing from size
https://bugs.webkit.org/show_bug.cgi?id=11957
Summary
REGRESSION: Unordered List Bullets too big and changing from size
Rene v Amerongen
Reported
2006-12-24 07:35:34 PST
In the supplied sample page, the bullets are too big. Also when I make the window small and resize the height, the bullets changes from size. sample code <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"> <HTML> <HEAD> <TITLE>Examples of margins, padding, and borders</TITLE> <STYLE type="text/css"> *{ font-size: 10pt; font-family: arial; font-style: normal; padding:0; margin:0; } div#container { background: yellow; margin: 12px; padding: 7px; border-style:solid; border-width:1px; border-color:red; } div.justShowContainerSize { margin: 0px; padding: 0px; border-style:dotted; border-width:1px; border-color:black; background: transparent; } div { color: white; /* text color is white */ background: blue; /* Content, padding will be blue */ margin: 12px; padding: 12px 0px 12px 12px; /* Note 0px padding right */ } div.withborder { border-style: dashed; border-width: 6px; border-color: lime; background: red; } div#two { background: green; margin: 12px; /*padding: 3px 3px 3px 3px;*/ } p, ul{ padding-left:40px; } .justShowContainerSize.red{ border-color:red; } .justShowContainerSize.orange{ border-color: orange; } .justShowContainerSize.white{ border-color:white; } </STYLE> </HEAD> <BODY> <h2>4 - see space between div's </h2> <p> red line is border container <ul> <li> margin: 12px <li> border: 1px <li> padding: 7px </ul> </p> <p> dotted orange line is the edge content of the container and the outside margin of the total size of the div's <ul> <li> margin: 12px <li> border: 0px <li> padding:12px </ul> </p> <p> solid white line is the edge of the padding of the div's inside the content of the container<br> dotted white border is the edge of the div's inside the content of the container <ul> <li> margin: 12px <li> border: 0px <li> padding:12px </ul> </p> <div id="container"> <div class="justShowContainerSize"> <div> <div class="justShowContainerSize white"> <div class="withborder">Div with withBorder</div> Div with no ID or class just tag and style </div> </div> <!-- <div class="justShowContainerSize orange"> --> <div id="two">first line in Div with 'two' as ID and style <div class="justShowContainerSize red"> <div class="withborder">again a div with a dashed border</div></div> Second line in Div with 'two' as ID and style. </div> <!--</div> --> </div> <!-- justShowContainerSize --> </div> <!-- container --> </BODY> </HTML>
Attachments
see the differences with other browsers
(176.91 KB, image/tiff)
2006-12-24 07:38 PST
,
Rene v Amerongen
no flags
Details
bullets ok, but before resizing
(73.54 KB, image/tiff)
2006-12-24 07:39 PST
,
Rene v Amerongen
no flags
Details
bullets not ok, after some resizing
(68.44 KB, image/tiff)
2006-12-24 07:40 PST
,
Rene v Amerongen
no flags
Details
bullets again ok, after more resizing
(85.05 KB, image/tiff)
2006-12-24 07:41 PST
,
Rene v Amerongen
no flags
Details
finally not ok, and stays this size.
(86.92 KB, image/tiff)
2006-12-24 07:42 PST
,
Rene v Amerongen
no flags
Details
reduced test case
(331 bytes, text/html)
2007-01-27 10:54 PST
,
Sam Weinig
no flags
Details
patch
(23.23 KB, patch)
2007-01-27 14:01 PST
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rene v Amerongen
Comment 1
2006-12-24 07:38:35 PST
Created
attachment 11997
[details]
see the differences with other browsers
Rene v Amerongen
Comment 2
2006-12-24 07:39:45 PST
Created
attachment 11998
[details]
bullets ok, but before resizing
Rene v Amerongen
Comment 3
2006-12-24 07:40:31 PST
Created
attachment 11999
[details]
bullets not ok, after some resizing
Rene v Amerongen
Comment 4
2006-12-24 07:41:18 PST
Created
attachment 12001
[details]
bullets again ok, after more resizing
Rene v Amerongen
Comment 5
2006-12-24 07:42:06 PST
Created
attachment 12002
[details]
finally not ok, and stays this size.
mitz
Comment 6
2006-12-24 07:42:54 PST
List markers don't set the stroke width :-)
Dave Hyatt
Comment 7
2006-12-24 14:00:47 PST
Why did any of this work before? Were we just never setting the stroke width for any HTML drawing and relying on 0 becoming 1?
Sam Weinig
Comment 8
2007-01-27 10:54:42 PST
Created
attachment 12714
[details]
reduced test case
Sam Weinig
Comment 9
2007-01-27 14:01:39 PST
Created
attachment 12717
[details]
patch Explicitly set the stroke width to 1.0f for list-markers during painting.
mitz
Comment 10
2007-01-27 14:08:38 PST
Comment on
attachment 12717
[details]
patch r=me
Sam Weinig
Comment 11
2007-01-27 14:56:20 PST
Landed in
r19192
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug