LayoutTests:

Reviewed by Mitz.

        - Test for http://bugs.webkit.org/show_bug.cgi?id=11957
          Unordered List Bullets too big and changing from size

        * fast/lists/big-list-marker-expected.checksum: Added.
        * fast/lists/big-list-marker-expected.png: Added.
        * fast/lists/big-list-marker-expected.txt: Added.
        * fast/lists/big-list-marker.html: Added.

WebCore:

        Reviewed by Mitz.

        - Patch for http://bugs.webkit.org/show_bug.cgi?id=11957
          REGRESSION: Unordered List Bullets too big and changing from size

        * rendering/RenderListMarker.cpp:
        (WebCore::RenderListMarker::paint): Explicitly set the stroke size to 1.0f.



Canonical link: https://commits.webkit.org/16146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19192 268f45cc-cd09-0410-ab3c-d52691b4dbfc